# os_installer

./: Cargo.toml
.github/: ci.yaml
.github/workflows/: release.yaml
assets/: packages.yaml
src/: bars.rs  flags.rs  inputs.rs  main.rs  packages.rs
